# customer_banking

./: Classification_Problem.ipynb  Dockerfile  README.md  causal_inference.ipynb  data_drift.ipynb  pyproject.toml  requirements.txt
#/: pyvenv.cfg
.github/workflows/: main_push.yml  predict.yml
01_Dataset/: bank-data-dictionary.xlsx
02_EDA/: eda.ipynb
03_Classification_Model/: Classification_Problem.ipynb
04_uplifting_model/catboost_info/: roc-file  time_left.tsv
04_uplifting_model/utils/: constants.py
06_improvements/: improvements.ipynb
07_experimentation/experiments/: expbase.py  experimentation.ipynb
08_testings/: generate_testset.py  uplifting_integration_test.py
08_testings/lgbm_test/: lgbm_unit_test.py  train.py
09_model_pipeline/predict/: Dockerfile.predict
09_model_pipeline/training/: constants.py  main_train.py  preprocess.py  preprocessing.py  train.py  utils.py
10_drift/: data_drift.ipynb
12_streamlit_demo/: app_drift.py
EDA/: eda.ipynb
Replace/: pyvenv.cfg
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
environment/: pyvenv.cfg
experimentation/experiments/: experimentation.ipynb
fairness_analysis/: FairML_analysis.ipynb  fairML_preprocessing.py  fairML_preprocessing_.py  test_fairML.py
name/: pyvenv.cfg
new_env/: pyvenv.cfg
preferred/: pyvenv.cfg
shenv/: pyvenv.cfg
testings/: uplifiting_unit_test.py  uplifting_integration_test.py
uplifting_model/: integration_test.py  unit_test.py  uplift_model.ipynb
with/: pyvenv.cfg
your/: pyvenv.cfg
(+203 files in other folders)
