[tool.poetry]
name = "targeted-marketing"
version = "0.1.0"
description = ""
authors = ["Sheida Majidi, Adrian Alarcon, Kritika Nayyar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "3.8.3"
seaborn = "0.13.2"
mlflow = "^2.12.1"
alembic = "^1.13.1"
boto3 = "1.34.75"
botocore = "1.34.75"
catboost = "1.2.3"
category-encoders = "2.6.3"
cloudpickle = "3.0.0"
colorlog = "6.8.2"
contourpy = "1.2.0"
cycler = "0.12.1"
filelock = "3.13.3"
fonttools = "4.50.0"
fsspec = "2024.3.1"
graphviz = "0.20.3"
importlib-resources = "6.4.0"
Jinja2 = "3.1.3"
jmespath = "1.0.1"
kiwisolver = "1.4.5"
lightgbm = "4.3.0"
llvmlite = "0.42.0"
MarkupSafe = "2.1.5"
mpmath = "1.3.0"
networkx = "3.2.1"
optuna = "3.6.1"
patsy = "0.5.6"
pillow = "10.3.0"
plotly = "5.20.0"
pyarrow = "^15.0.0"
pytz = "2024.1"
PyYAML = "6.0.1"
s3transfer = "0.10.1"
scikit-learn = "1.4.1.post1"
scipy = "1.12.0"
shap = "0.45.0"
slicer = "0.0.7"
SQLAlchemy = "2.0.29"
dslibs-baosws = "^0.0.1"
statsmodels = "0.14.1"
sympy = "1.12"
tenacity = "8.2.3"
threadpoolctl = "3.4.0"
torch = "2.2.2"
tqdm = "4.66.2"
tzdata = "2024.1"
urllib3 = "1.26.18"
xgboost = "2.0.3"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
